[tool.poetry]
name = "pednav-tools"
version = "0.1.0"
description = "A Python package for post processing IMU and Magnetometer data for pedestrian navigation."
authors = ["Walter Livingston <wblivingston18@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
