[tool.poetry]
name = "pednavtools-py"
version = "0.1.0"
description = "A python package for post-processing imu and magnetometer data for pedestrian navigation."
authors = ["Walter Livingston <wblivingston18@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pednavtools"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"

[tool.poetry.group.dev.dependencies]
bagpy = "^0.5"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
